--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,39 @@
 h3 {
     color: gray;
 }
+
+
+.product_item {
+    box-shadow: 1px 2px 5px 0px  black;
+}
+.product_item:hover {
+    box-shadow: 6px 7px 20px 0px  black;
+}
+
+.product_item a {
+    text-decoration: none;
+    background-color: lightgray;
+    border-radius: 2px;
+    border: 1px solid gray;
+    padding: 2px;
+    color: black;
+
+}
+
+/*html {*/
+/*    position: relative;*/
+/*    min-height: 100%;*/
+/*}*/
+/*body {*/
+/*    !* Margin bottom by footer height *!*/
+/*    margin-bottom: 60px;*/
+/*}*/
+/*footer {*/
+/*    position: absolute;*/
+/*    bottom: 0;*/
+/*    margin-top: 100px;*/
+/*    width: 80%;*/
+/*    !* Set the fixed height of the footer here *!*/
+/*    height: 60px;*/
+/*    !*background-color: #f5f5f5;*!*/
+/*}*/
