--- a/src/main/resources/templates/admin/orders.html
+++ b/src/main/resources/templates/admin/orders.html
@@ -19,9 +19,9 @@
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="/index" class="nav-link px-2 link-secondary">Главная</a></li>
             <li><a href="/product" class="nav-link px-2 link-dark">Товары</a></li>
-            <li><a href="/admin/test" class="nav-link px-2 link-dark">Заказы</a></li>
+            <li><a href="/admin/orders" class="nav-link px-2 link-dark">Заказы</a></li>
             <li><a href="/cart" class="nav-link px-2 link-dark">Корзина</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">Кабинет</a></li>
+            <li><a href="/admin" class="nav-link px-2 link-dark">Кабинет</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
@@ -50,6 +50,7 @@
     <p th:text="'Цена: ' + ${order.getPrice()}"></p>
     <p th:text="'Дата заказа: ' + ${#temporals.format(order.getDateTime(), 'dd-MMM-yyyy')}"></p>
     <p th:text="'Статус: ' + ${order.getStatus()}"></p>
+    <p th:text="'ID: ' + ${order.getId()}"></p>
 
     <hr>
 </div>
@@ -62,6 +63,8 @@
     <p th:text="'Цена: ' + ${order.getPrice()}"></p>
     <p th:text="'Дата заказа: ' + ${#temporals.format(order.getDateTime(), 'dd-MMM-yyyy')}"></p>
     <p th:text="'Статус: ' + ${order.getStatus()}"></p>
+    <p th:text="'ID: ' + ${order.getId()}"></p>
+
     <script>
         document.querySelector(".allorder").outerHTML ="";
         document.querySelector(".resultorder").innerHTML ="Результат поиска: ";
