--- a/src/main/resources/templates/admin/orders.html
+++ b/src/main/resources/templates/admin/orders.html
@@ -41,17 +41,52 @@
         </fieldset>
 </form>
 
-<h3 class="allorder">Все заказы:</h3>
-<div th:each="order : ${orders}">
-    <h3 th:text="'Заказ № ' + ${order.getNumber()}"></h3>
-    <img th:src="'/img/' + ${order.getProduct().imageList[0].getFileName()}" width="300px">
-    <p th:text="'Наименование: ' + ${order.getProduct().getTitle()}"></p>
-    <p th:text="'Количество: ' + ${order.getCount()}"></p>
-    <p th:text="'Цена: ' + ${order.getPrice()}"></p>
-    <p th:text="'Дата заказа: ' + ${#temporals.format(order.getDateTime(), 'dd-MMM-yyyy')}"></p>
-    <p th:text="'Статус: ' + ${order.getStatus()}"></p>
-    <p th:text="'ID: ' + ${order.getId()}"></p>
-    <a th:href="@{/admin/order/status/{id}(id=${order.getId()})}">Отменить заказ</a>
+<!--<h3 class="allorder">Все заказы:</h3>-->
+<!--<div th:each="order : ${orders}">-->
+<!--    <h3 th:text="'Заказ № ' + ${order.getNumber()}"></h3>-->
+<!--    <img th:src="'/img/' + ${order.getProduct().imageList[0].getFileName()}" width="300px">-->
+<!--    <p th:text="'Наименование: ' + ${order.getProduct().getTitle()}"></p>-->
+<!--    <p th:text="'Количество: ' + ${order.getCount()}"></p>-->
+<!--    <p th:text="'Цена: ' + ${order.getPrice()}"></p>-->
+<!--    <p th:text="'Дата заказа: ' + ${#temporals.format(order.getDateTime(), 'dd-MMM-yyyy')}"></p>-->
+<!--    <p th:text="'Статус: ' + ${order.getStatus()}"></p>-->
+<!--    <p th:text="'ID: ' + ${order.getId()}"></p>-->
+<!--    <a th:href="@{/admin/order/status/{id}(id=${order.getId()})}">Отменить заказ</a>-->
+<!--    <br>-->
+<!--    <br>-->
+<!--    <br>-->
+    <h3 class="allorder1">Заказы</h3>
+    <table class="table table-bordered" id = "ttt" style="margin-top: 10px;">
+        <thead class="table-light">
+        <tr>
+            <th>ID</th>
+            <th>Изображение</th>
+            <th>Заказ №</th>
+            <th>Наименование</th>
+            <th>Количество</th>
+            <th>Цена</th>
+            <th>Дата заказа</th>
+            <th>Статус</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="order : ${orders}">
+            <td th:text="${order.getId()}"></td>
+            <td><img th:src="'/img/' + ${order.getProduct().imageList[0].getFileName()}" width="50px"></td>
+            <td th:text="${order.getNumber()}"></td>
+            <td th:text="${order.getProduct().getTitle()}"></td>
+            <td th:text="${order.getCount()}"></td>
+            <td th:text="${order.getPrice()}"></td>
+            <td th:text="${#temporals.format(order.getDateTime(), 'dd-MMM-yyyy')}"></td>
+            <td th:text="${order.getStatus()}"></td>
+
+        </tr>
+        </tbody>
+    </table>
+
+
+
+
 
 
     <hr>
@@ -70,8 +105,13 @@
 
 
     <script>
-        document.querySelector(".allorder").outerHTML ="";
+
+        // document.querySelector(".allorder").outerHTML ="";
         document.querySelector(".resultorder").innerHTML ="Результат поиска: ";
+        document.querySelector(".allorder1").outerHTML ="";
+
+        let el = document.getElementById("ttt");
+        el.remove();
     </script>
     <hr>
 </div>
