--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -23,6 +23,7 @@
             <li><a href="/admin/orders" class="nav-link px-2 link-dark">Заказы</a></li>
             <li><a href="/cart" class="nav-link px-2 link-dark">Корзина</a></li>
             <li><a href="/admin" class="nav-link px-2 link-dark">Кабинет</a></li>
+            <li><a href="/admin/users" class="nav-link px-2 link-dark">Пользователи</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
