--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Админ панель</title>
+    <title>Личный кабинет администратора</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link th:href="@{/css/bootstrap.min.css}" type="text/css" rel="stylesheet">
     <link th:href="@{/css/style.css}" type="text/css" rel="stylesheet">
@@ -13,7 +13,7 @@
 
 <div class="container bg-light" style="height:auto;">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+        <a href="/product" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
             <img class = "header-icon" src="/assets/img/cpu-fill.png" alt="Bootstrap" width="40" height="32"><span style = "font-weight: bold; padding-left: 5px;">MyStore</span>
         </a>
 
@@ -31,21 +31,24 @@
         </div>
     </header>
 
-        <div class="container bg-light" style="height:auto;">
-        <div style="width:100%" >
+<!--        <div class="container bg-light" style="height:auto;">-->
             <div class="row justify-content-between">
-            <div class="col-7" style="margin-top:30px;"><h3>Личный кабинет администратора</h3></div>
-                <div class="col-3 " style="padding-left: 20px">
+                <div class="col" style="text-align: left; padding-right: 0px;">
+                    <h3>Личный кабинет администратора</h3>
+                </div>
+                <div class="col" style="text-align: right">
                     <form th:method="POST" th:action="@{/logout}">
-                        <input style="margin-top: 10px;" type="submit" value="Выйти из личного кабинета">
+                        <input type="submit" value="Выйти из личного кабинета">
                     </form>
                 </div>
             </div>
+
+
             <a href="/admin/product/add">Добавить товар</a>
             <h3>Каталог товаров: </h3>
             <hr>
-            <div class="row">
-            <div class ="product_item col-md-3" style="border:1px solid gray; border-radius: 5px; background-color: #eceeec; margin: 2px 2px 2px 2px; padding: 5px;" th:each="product : ${products}">
+            <div class="row justify-content-evenly">
+            <div class ="product_item col-md-3" style="border:1px solid gray; border-radius: 5px; background-color: #eceeec; margin: 2px 2px 10px 2px; padding: 5px;" th:each="product : ${products}">
                 <img th:src="'/img/' + ${product.imageList[0].getFileName()}" width="100px">
                 <p th:text="'Наименование: ' + ${product.getTitle()}"></p>
                 <p th:text="'Описание: ' + ${product.getDescription()}"></p>
@@ -58,8 +61,8 @@
 <!--                <hr>-->
             </div>
             </div>
-        </div>
-        </div>
+
+<!--        </div>-->
 
     <footer>
         <div class="row">
