--- a/src/main/resources/templates/admin/orders.html
+++ b/src/main/resources/templates/admin/orders.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Поиск заказ</title>
+    <title>Информация о заказах</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link th:href="@{/css/bootstrap.min.css}" type="text/css" rel="stylesheet">
     <link th:href="@{/css/style.css}" type="text/css" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
 <div class="container bg-light" style="height:auto;">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+        <a href="/product" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
             <img class = "header-icon" src="/assets/img/cpu-fill.png" alt="Bootstrap" width="40" height="32"><span style = "font-weight: bold; padding-left: 5px;">MyStore</span>
         </a>
 
