--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Поиск заказ</title>
+  <title>Информация о пользователях</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link th:href="@{/css/bootstrap.min.css}" type="text/css" rel="stylesheet">
   <link th:href="@{/css/style.css}" type="text/css" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
 <div class="container bg-light" style="height:100vh;">
   <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-    <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+    <a href="/product" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
       <img class = "header-icon" src="/assets/img/cpu-fill.png" alt="Bootstrap" width="40" height="32"><span style = "font-weight: bold; padding-left: 5px;">MyStore</span>
     </a>
 
@@ -47,7 +47,13 @@
         <td th:text="${user.getLogin()}"></td>
         <td th:text="${user.getRole()}"></td>
 <!--        <td th:if="${user.getRole()} =='ROLE_USER'" th:text="'текст'"><a th:href="@{/admin/users/role/{id}(id=${user.getId()})}">Изменить роль</a></td>-->
-        <td><a th:if="${user.getRole()} =='ROLE_USER'" th:href="@{/admin/users/role/{id}(id=${user.getId()})}">Изменить роль</a></td>
+        <td><a th:if="${user.getRole()} =='ROLE_USER'" th:href="@{/admin/users/role_user_up/{id}(id=${user.getId()})}">Повысить</a>
+            <a th:if="${user.getRole()} =='ROLE_SUPER'" th:href="@{/admin/users/role_super_down/{id}(id=${user.getId()})}">Понизить</a>
+            <a th:if="${user.getRole()} =='ROLE_SUPER'" th:href="@{/admin/users/role_super_up/{id}(id=${user.getId()})}">Повысить</a>
+            <a th:if="${user.getRole()} =='ROLE_POWER'" th:href="@{/admin/users/role_power_down/{id}(id=${user.getId()})}">Понизить</a>
+            <a th:if="${user.getRole()} =='ROLE_ADMIN'" th:href="@{/admin/users/role_admin_down/{id}(id=${user.getId()})}">Разжаловать</a>
+
+        </td>
       </tr>
       </tbody>
     </table>
