--- a/src/main/resources/templates/user/cart.html
+++ b/src/main/resources/templates/user/cart.html
@@ -2,11 +2,41 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Корзина</title>
+    <title>Добавление товара</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link th:href="@{/css/bootstrap.min.css}" type="text/css" rel="stylesheet">
+    <link th:href="@{/css/style.css}" type="text/css" rel="stylesheet">
+    <link th:href="@{/css/headers.css}" type="text/css" rel="stylesheet">
+    <link th:href="@{/css/footer.css}" type="text/css" rel="stylesheet">
+
 </head>
 <body>
+<div class="container">
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <a href="/product" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+            <img class = "header-icon" src="/assets/img/cpu-fill.png" alt="Bootstrap" width="40" height="32"><span style = "font-weight: bold; padding-left: 5px;">MyStore</span>
+        </a>
+
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="/index" class="nav-link px-2 link-secondary">Главная</a></li>
+            <li><a href="/product" class="nav-link px-2 link-dark">Товары</a></li>
+            <li><a href="/orders" class="nav-link px-2 link-dark">Заказы</a></li>
+            <li><a href="/cart" class="nav-link px-2 link-dark">Корзина</a></li>
+            <li><a href="/index" class="nav-link px-2 link-dark">Кабинет</a></li>
+        </ul>
+
+        <div class="col-md-3 text-end">
+            <button onclick="window.location.href = '/auth/login'" type="button" class="btn btn-outline-secondary me-2">Войти</button>
+            <button onclick="window.location.href = '/auth/registration'" type="button" class="btn btn-secondary">Регистрация</button>
+        </div>
+
+    </header>
+
+    <div class="container bg-light" style="height:auto;">
+
 <h3>Корзина товаров</h3>
-<div th:each="product : ${cart_product}">
+    <div class="row">
+    <div class=" product_item col-md-3" style="border:1px solid gray; border-radius: 5px; background-color: #eceeec; margin: 20px 20px 20px 20px; padding: 5px;" th:each="product : ${cart_product}">
     <img th:src="'/img/' + ${product.imageList[0].getFileName()}" width="300px">
     <br>
     <br>
@@ -14,7 +44,35 @@
     <p th:text="'Цена: ' + ${product.getPrice()}"></p>
     <a th:href="@{/cart/delete/{id}(id=${product.getId()})}">Удалить</a>
 </div>
+        </div>
 <h3 th:text="'Итоговая цена: ' + ${price}"></h3>
 <a href="/order/create">Оформить заказ</a>
+    </div>
+
+    <footer>
+        <div class="row ">
+            <!--                <div class="col-1"></div>-->
+            <div class="col-12">
+                <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                    <!--      <footer class="fixed-bottom d-flex flex-wrap justify-content-around align-items-center py-3 my-4 border-top">-->
+                    <div>
+                        <div class="d-flex align-items-center">
+                            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                                <img class = "footer-icon" src="/assets/img/cpu.png" alt="Bootstrap" width="30" height="25">
+                            </a>
+                            <span class="mb-3 mb-md-0 text-muted">&copy; 2022 HolodN, Inc</span>
+                        </div>
+                    </div>
+                    <ul class="nav col-md-2 justify-content-end list-unstyled d-flex">
+                        <div class = "footer-icon"><li class="ms-3"><a class="text-muted" href="#"><img src="/assets/img/facebook.png" alt="Facebook" width="30" height="25"></a></li></div>
+                        <div class = "footer-icon"> <li class="ms-3"><a class="text-muted" href="#"><img class = "footer-icon" src="/assets/img/instagram.png" alt="Instagramm" width="30" height="25"></a></li></div>
+                        <div class = "footer-icon"> <li class="ms-3"><a class="text-muted" href="#"><img class = "footer-icon" src="/assets/img/twitter.png" alt="Twitter" width="30" height="25"></a></li></div>
+                    </ul>
+                </div>
+            </div>
+            <!--                <div class="col-1"></div>-->
+        </div>
+    </footer>
+</div>
 </body>
 </html>
