--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -2,65 +2,130 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Главная</title>
+    <title>Список товаров</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link th:href="@{/css/bootstrap.min.css}" type="text/css" rel="stylesheet">
+    <link th:href="@{/css/style.css}" type="text/css" rel="stylesheet">
+    <link th:href="@{/css/headers.css}" type="text/css" rel="stylesheet">
+    <link th:href="@{/css/footer.css}" type="text/css" rel="stylesheet">
 </head>
 <body>
-<h3>Личный кабинет пользователя</h3>
-<!--<a href="/logout">Выйти из личного кабинета</a>-->
-<form method="post" th:action="@{/logout}">
-    <input type="submit" value="Выйти из личного кабинета">
-</form>
-<form method="get" th:action="@{/cart}">
-    <input type="submit" value="Корзина">
-</form>
-<form method="get" th:action="@{/orders}">
-    <input type="submit" value="Заказы">
-</form>
-<form th:method="POST" th:action="@{/product/search}">
-    <fieldset>
-        <legend>Выберите параметры для сортировки, поиска, фильтрации</legend>
-        <br>
-        <label for="search">Поиск по наименованию</label>
-        <input type="search" id="search">
-        <br>
-        <p>Цена, ₽</p>
-        <label for="ot">От</label>
-        <input type="text" name="ot" id="ot">
-        <label for="do">До</label>
-        <input type="text" name="do" id="do">
-        <br>
-        <br>
-        <input type="radio" id="ascending_price" name="price">
-        <label for="ascending_price">Отсортировать по возрастанию цены</label>
-        <br>
-        <br>
-        <input type="radio" id="descending_price" name="price">
-        <label for="descending_price">Отсортировать по убыванию цены</label>
-        <p>Категория товаров: </p>
-        <input type="radio" id="furniture" name="category" value="furniture">
-        <label for="furniture">Мебель</label>
-        <br>
-        <br>
-        <input type="radio" id="appliances" name="category" value="appliances">
-        <label for=appliances>Бытовая техника</label>
-        <br>
-        <br>
-        <input type="radio" id="clothes" name="category" value="clothes">
-        <label for="clothes">Одежка</label>
-        <br>
-        <br>
-        <input type="submit" value="Найти">
-    </fieldset>
-</form>
-<h3>Доступные товары: </h3>
-<div th:each="product : ${products}">
-    <img th:src="'/img/' + ${product.imageList[0].getFileName()}" width="300px">
-    <br>
-    <br>
-    <a th:href="@{/product/info/{id}(id=${product.getId()})}" th:text="${product.getTitle()}" id="title"></a>
-    <p th:text="'Цена: ' + ${product.getPrice()}"></p>
-    <a th:href="@{/cart/add/{id}(id=${product.getId()})}">Добавить в корзину</a>
-    <hr>
+
+<div class="container bg-light" style="height:auto;">
+                <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+                    <a href="/product" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+                        <img class = "header-icon" src="/assets/img/cpu-fill.png" alt="Bootstrap" width="40" height="32"><span style = "font-weight: bold; padding-left: 5px;">MyStore</span>
+                    </a>
+
+                    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                        <li><a href="/index" class="nav-link px-2 link-secondary">Главная</a></li>
+                        <li><a href="/product" class="nav-link px-2 link-dark">Товары</a></li>
+                        <li><a href="/orders" class="nav-link px-2 link-dark">Заказы</a></li>
+                        <li><a href="/cart" class="nav-link px-2 link-dark">Корзина</a></li>
+                        <li><a href="/index" class="nav-link px-2 link-dark">Кабинет</a></li>
+                    </ul>
+
+                    <div class="col-md-3 text-end">
+                        <button onclick="window.location.href = '/auth/login'" type="button" class="btn btn-outline-secondary me-2">Войти</button>
+                        <button onclick="window.location.href = '/auth/registration'" type="button" class="btn btn-secondary">Регистрация</button>
+                    </div>
+                </header>
+
+                    <div style="margin-left: 20px;">
+
+                        <div class="row justify-content-between">
+                            <div class = "col" style="text-align: left">
+                            <h3>Личный кабинет пользователя</h3></div>
+                                <!--<a href="/logout">Выйти из личного кабинета</a>-->
+                            <div class = "col text-right" style="text-align: right">
+                                <form method="post" th:action="@{/logout}">
+                                    <input type="submit" value="Выйти из личного кабинета">
+                                </form>
+                            </div>
+                            <!--<form method="get" th:action="@{/cart}">-->
+                            <!--    <input type="submit" value="Корзина">-->
+                            <!--</form>-->
+                            <!--<form method="get" th:action="@{/orders}">-->
+                            <!--    <input type="submit" value="Заказы">-->
+                            <!--</form>-->
+                        </div>
+                    </div>
+
+                    <div style="width:100%; padding: 10px; border:1px solid gray; border-radius: 5px; background-color: #eceeec;" >
+                        <form th:method="POST" th:action="@{/product/search}">
+                            <fieldset>
+                                <legend>Выберите параметры для сортировки, поиска, фильтрации</legend>
+                                <br>
+                                <label for="search">Поиск по наименованию</label>
+                                <input type="search" id="search">
+                                <br>
+                                <p>Цена, ₽</p>
+                                <label for="ot">От</label>
+                                <input type="text" name="ot" id="ot">
+                                <label for="do">До</label>
+                                <input type="text" name="do" id="do">
+                                <br>
+                                <br>
+                                <input type="radio" id="ascending_price" name="price">
+                                <label for="ascending_price">Отсортировать по возрастанию цены</label>
+                                <br>
+                                <br>
+                                <input type="radio" id="descending_price" name="price">
+                                <label for="descending_price">Отсортировать по убыванию цены</label>
+                                <p>Категория товаров: </p>
+                                <input type="radio" id="furniture" name="category" value="furniture">
+                                <label for="furniture">Мебель</label>
+                                <br>
+                                <br>
+                                <input type="radio" id="appliances" name="category" value="appliances">
+                                <label for=appliances>Бытовая техника</label>
+                                <br>
+                                <br>
+                                <input type="radio" id="clothes" name="category" value="clothes">
+                                <label for="clothes">Одежка</label>
+                                <br>
+                                <br>
+                                <input type="submit" value="Найти">
+                            </fieldset>
+                        </form>
+                    </div>
+
+                <h3>Доступные товары: </h3>
+                <div class="row justify-content-evenly">
+                        <div class=" product_item col-md-3" style="border:1px solid gray; border-radius: 5px; background-color: #eceeec; margin: 20px 20px 20px 20px; padding: 5px;" th:each="product : ${products}">
+                            <img th:src="'/img/' + ${product.imageList[0].getFileName()}" width="300px">
+                            <br>
+                            <br>
+                            <a th:href="@{/product/info/{id}(id=${product.getId()})}" th:text="${product.getTitle()}" id="title"></a>
+                            <p th:text="'Цена: ' + ${product.getPrice()}"></p>
+                            <a th:href="@{/cart/add/{id}(id=${product.getId()})}">Добавить в корзину</a>
+                        </div>
+                </div>
+
+                    <footer>
+                        <div class="row ">
+                            <!--                <div class="col-1"></div>-->
+                            <div class="col-12">
+                                <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                                    <!--      <footer class="fixed-bottom d-flex flex-wrap justify-content-around align-items-center py-3 my-4 border-top">-->
+                                    <div>
+                                        <div class="d-flex align-items-center">
+                                            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                                                <img class = "footer-icon" src="/assets/img/cpu.png" alt="Bootstrap" width="30" height="25">
+                                            </a>
+                                            <span class="mb-3 mb-md-0 text-muted">&copy; 2022 HolodN, Inc</span>
+                                        </div>
+                                    </div>
+                                    <ul class="nav col-md-2 justify-content-end list-unstyled d-flex">
+                                        <div class = "footer-icon"><li class="ms-3"><a class="text-muted" href="#"><img src="/assets/img/facebook.png" alt="Facebook" width="30" height="25"></a></li></div>
+                                        <div class = "footer-icon"> <li class="ms-3"><a class="text-muted" href="#"><img class = "footer-icon" src="/assets/img/instagram.png" alt="Instagramm" width="30" height="25"></a></li></div>
+                                        <div class = "footer-icon"> <li class="ms-3"><a class="text-muted" href="#"><img class = "footer-icon" src="/assets/img/twitter.png" alt="Twitter" width="30" height="25"></a></li></div>
+                                    </ul>
+                                </div>
+                            </div>
+                            <!--                <div class="col-1"></div>-->
+                        </div>
+                    </footer>
 </div>
 </body>
 </html>
