--- a/src/main/resources/templates/admin/orders.html
+++ b/src/main/resources/templates/admin/orders.html
@@ -62,6 +62,7 @@
             <th>ID</th>
             <th>Изображение</th>
             <th>Заказ №</th>
+            <th>Пользователь</th>
             <th>Наименование</th>
             <th>Количество</th>
             <th>Цена</th>
@@ -74,6 +75,7 @@
             <td th:text="${order.getId()}"></td>
             <td><img th:src="'/img/' + ${order.getProduct().imageList[0].getFileName()}" width="50px"></td>
             <td th:text="${order.getNumber()}"></td>
+            <td th:text="${order.getPerson().getLogin()}"</td>
             <td th:text="${order.getProduct().getTitle()}"></td>
             <td th:text="${order.getCount()}"></td>
             <td th:text="${order.getPrice()}"></td>
