--- a/src/main/resources/templates/product/product.html
+++ b/src/main/resources/templates/product/product.html
@@ -32,8 +32,8 @@
     </header>
 
 
-        <div class="row">
-            <div style="width:100%; padding: 10px; border:1px solid gray; border-radius: 5px; background-color: #eceeec;" >
+        <div class="row justify-content-center">
+            <div style="width: 95%; padding: 10px; border:1px solid gray; border-radius: 5px; background-color: #eceeec;" >
                 <form th:method="POST" th:action="@{/product/search}">
                     <fieldset>
                         <legend>Выберите параметры для сортировки, поиска, фильтрации</legend>
@@ -127,7 +127,7 @@
         </footer>
     </div>
 
-
+</div>
 
 <script src="@{/assets/dist/js/bootstrap.bundle.min.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
