--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -32,20 +32,21 @@
   </header>
 
   <div class="container bg-light" style="height:100vh;">
-    <h3>Регистрация:</h3>
-    <form method="post" th:action="@{/auth/registration}" th:object="${person}">
-      <label for="login">Введите логин: </label>
-      <input type="text"  th:field="*{login}" placeholder="Введите пароль" name="username" id="login">
-      <div style="color: red" th:if="${#fields.hasErrors('login')}" th:errors="*{login}"></div>
-      <br>
-      <label for="password">Введите пароль: </label>
-      <input type="password" th:field="*{password}" placeholder="Введите пароль" name="password" id="password">
-      <div style="color: red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
-      <br>
-      <input type="submit" value="Зарегистрироваться">
-    </form>
-    <a href="/auth/login">Войти</a>
-  </div>
+    <div>
+      <h3>Регистрация</h3>
+      <form method="post" action="/process_login">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+        <label for="username">Введите логин: </label>
+        <input style="margin: 5px 0 0 10px;" type="text" placeholder="Введите пароль" name="username" id="username">
+        <br>
+        <label for="password">Введите пароль: </label>
+        <input style="margin: 5px 0;"type="password" placeholder="Введите пароль" name="password" id="password">
+        <br>
+        <input style="margin: 5px 0;" type="submit" value="Войти">
+        <div th:if="${param.error}" style="color: red">Неправильный логин или пароль</div>
+      </form>
+      <a href="/auth/registration">Регистрация</a>
+    </div>
 
 <!--  <div style="height: 320px;">-->
 <!--  </div>-->
