--- a/src/main/resources/templates/user/cart.html
+++ b/src/main/resources/templates/user/cart.html
@@ -19,7 +19,7 @@
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="/index" class="nav-link px-2 link-secondary">Главная</a></li>
-            <li><a href="/product" class="nav-link px-2 link-dark">Товары</a></li>
+<!--            <li><a href="#" class="nav-link px-2 link-dark">Товары</a></li>-->
             <li><a href="/orders" class="nav-link px-2 link-dark">Заказы</a></li>
             <li><a href="/cart" class="nav-link px-2 link-dark">Корзина</a></li>
             <li><a href="/index" class="nav-link px-2 link-dark">Кабинет</a></li>
