--- a/src/main/resources/templates/user/infoProduct.html
+++ b/src/main/resources/templates/user/infoProduct.html
@@ -2,18 +2,75 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Информация о товаре</title>
+    <title>Список товаров</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link th:href="@{/css/bootstrap.min.css}" type="text/css" rel="stylesheet">
+    <link th:href="@{/css/style.css}" type="text/css" rel="stylesheet">
+    <link th:href="@{/css/headers.css}" type="text/css" rel="stylesheet">
+    <link th:href="@{/css/footer.css}" type="text/css" rel="stylesheet">
 </head>
 <body>
-<p th:text="'Наименование: ' + ${product.getTitle()}"></p>
-<p th:text="'Описание: ' + ${product.getDescription()}"></p>
-<p th:text="'Цена: ' + ${product.getPrice()}"></p>
-<p th:text="'Склад: ' + ${product.getWarehouse()}"></p>
-<p th:text="'Продавец: ' + ${product.getSeller()}"></p>
-<p th:text="'Категория: ' + ${product.getCategory().getName()}"></p>
 
-<div th:each="img : ${product.getImageList()}">
-    <img th:src="'/img/' + ${img.getFileName()}" width="300px">
+<div class="container bg-light" style="height:auto;">
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <a href="/product" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+            <img class = "header-icon" src="/assets/img/cpu-fill.png" alt="Bootstrap" width="40" height="32"><span style = "font-weight: bold; padding-left: 5px;">MyStore</span>
+        </a>
+
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="/index" class="nav-link px-2 link-secondary">Главная</a></li>
+<!--            <li><a href="/product" class="nav-link px-2 link-dark">Товары</a></li>-->
+            <li><a href="/orders" class="nav-link px-2 link-dark">Заказы</a></li>
+            <li><a href="/cart" class="nav-link px-2 link-dark">Корзина</a></li>
+            <li><a href="/index" class="nav-link px-2 link-dark">Кабинет</a></li>
+        </ul>
+
+        <div class="col-md-3 text-end">
+            <button onclick="window.location.href = '/auth/login'" type="button" class="btn btn-outline-secondary me-2">Войти</button>
+            <button onclick="window.location.href = '/auth/registration'" type="button" class="btn btn-secondary">Регистрация</button>
+        </div>
+    </header>
+
+        <p th:text="'Наименование: ' + ${product.getTitle()}"></p>
+        <p th:text="'Описание: ' + ${product.getDescription()}"></p>
+        <p th:text="'Цена: ' + ${product.getPrice()}"></p>
+        <p th:text="'Склад: ' + ${product.getWarehouse()}"></p>
+        <p th:text="'Продавец: ' + ${product.getSeller()}"></p>
+        <p th:text="'Категория: ' + ${product.getCategory().getName()}"></p>
+
+        <div class="row justify-content-between">
+            <div class = "col-2" style="border: 1px solid lightgrey; margin-right: 10px; padding-top:20px;" th:each="img : ${product.getImageList()}">
+                <img th:src="'/img/' + ${img.getFileName()}" width="200px">
+            </div>
+        </div>
+
+    <footer>
+        <div class="row ">
+            <!--                <div class="col-1"></div>-->
+            <div class="col-12">
+                <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                    <!--      <footer class="fixed-bottom d-flex flex-wrap justify-content-around align-items-center py-3 my-4 border-top">-->
+                    <div>
+                        <div class="d-flex align-items-center">
+                            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                                <img class = "footer-icon" src="/assets/img/cpu.png" alt="Bootstrap" width="30" height="25">
+                            </a>
+                            <span class="mb-3 mb-md-0 text-muted">&copy; 2022 HolodN, Inc</span>
+                        </div>
+                    </div>
+                    <ul class="nav col-md-2 justify-content-end list-unstyled d-flex">
+                        <div class = "footer-icon"><li class="ms-3"><a class="text-muted" href="#"><img src="/assets/img/facebook.png" alt="Facebook" width="30" height="25"></a></li></div>
+                        <div class = "footer-icon"> <li class="ms-3"><a class="text-muted" href="#"><img class = "footer-icon" src="/assets/img/instagram.png" alt="Instagramm" width="30" height="25"></a></li></div>
+                        <div class = "footer-icon"> <li class="ms-3"><a class="text-muted" href="#"><img class = "footer-icon" src="/assets/img/twitter.png" alt="Twitter" width="30" height="25"></a></li></div>
+                    </ul>
+                </div>
+            </div>
+            <!--                <div class="col-1"></div>-->
+        </div>
+    </footer>
 </div>
+</body>
+</html>
+
 </body>
 </html>
