--- a/src/main/resources/templates/user/orders.html
+++ b/src/main/resources/templates/user/orders.html
@@ -2,21 +2,152 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Заказы</title>
+    <title>Информация о заказах</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link th:href="@{/css/bootstrap.min.css}" type="text/css" rel="stylesheet">
+    <link th:href="@{/css/style.css}" type="text/css" rel="stylesheet">
+    <link th:href="@{/css/headers.css}" type="text/css" rel="stylesheet">
+    <link th:href="@{/css/footer.css}" type="text/css" rel="stylesheet">
 </head>
 <body>
-<h3>Заказы</h3>
-<div th:each="order : ${orders}">
-    <h3 th:text="'Заказ № ' + ${order.getNumber()}"></h3>
-    <img th:src="'/img/' + ${order.getProduct().imageList[0].getFileName()}" width="300px">
-    <p th:text="'Наименование: ' + ${order.getProduct().getTitle()}"></p>
-    <p th:text="'Количество: ' + ${order.getCount()}"></p>
-    <p th:text="'Цена: ' + ${order.getPrice()}"></p>
-    <p th:text="'Дата заказа: ' + ${#temporals.format(order.getDateTime(), 'dd-MMM-yyyy')}"></p>
-    <p th:text="'Статус: ' + ${order.getStatus()}"></p>
+<div class="container bg-light" style="height:auto;">
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <a href="/product" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+            <img class = "header-icon" src="/assets/img/cpu-fill.png" alt="Bootstrap" width="40" height="32"><span style = "font-weight: bold; padding-left: 5px;">MyStore</span>
+        </a>
 
-    <hr>
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="/index" class="nav-link px-2 link-secondary">Главная</a></li>
+<!--            <li><a href="/product" class="nav-link px-2 link-dark">Товары</a></li>-->
+            <li><a href="/admin/orders" class="nav-link px-2 link-dark">Заказы</a></li>
+            <li><a href="/admin" class="nav-link px-2 link-dark">Кабинет</a></li>
+            <li><a href="/admin/users" class="nav-link px-2 link-dark">Пользователи</a></li>
+        </ul>
+
+        <div class="col-md-3 text-end">
+            <button onclick="window.location.href = '/auth/login'" type="button" class="btn btn-outline-secondary me-2">Войти</button>
+            <button onclick="window.location.href = '/auth/registration'" type="button" class="btn btn-secondary">Регистрация</button>
+        </div>
+    </header>
+
+<!--    <div class="container bg-light" style="height:auto;">-->
+
+<!--        <h3>Поиск заказа</h3>-->
+<!--        <form th:method="POST" th:action="@{/admin/order_search}">-->
+<!--            <fieldset>-->
+<!--                <label for="test">Введите номер:</label>-->
+<!--                <input type="text" placeholder="Введите номер" name="test" id="test">-->
+<!--                <input type="submit" value="Найти">-->
+<!--            </fieldset>-->
+<!--        </form>-->
+
+        <!--<h3 class="allorder">Все заказы:</h3>-->
+        <!--<div th:each="order : ${orders}">-->
+        <!--    <h3 th:text="'Заказ № ' + ${order.getNumber()}"></h3>-->
+        <!--    <img th:src="'/img/' + ${order.getProduct().imageList[0].getFileName()}" width="300px">-->
+        <!--    <p th:text="'Наименование: ' + ${order.getProduct().getTitle()}"></p>-->
+        <!--    <p th:text="'Количество: ' + ${order.getCount()}"></p>-->
+        <!--    <p th:text="'Цена: ' + ${order.getPrice()}"></p>-->
+        <!--    <p th:text="'Дата заказа: ' + ${#temporals.format(order.getDateTime(), 'dd-MMM-yyyy')}"></p>-->
+        <!--    <p th:text="'Статус: ' + ${order.getStatus()}"></p>-->
+        <!--    <p th:text="'ID: ' + ${order.getId()}"></p>-->
+        <!--    <a th:href="@{/admin/order/status/{id}(id=${order.getId()})}">Отменить заказ</a>-->
+        <!--    <br>-->
+        <!--    <br>-->
+        <!--    <br>-->
+        <h3>Заказы</h3>
+        <table class="table table-bordered" id = "ttt" style="margin-top: 10px;">
+            <thead class="table-light">
+            <tr>
+                <th>ID</th>
+                <th>Изображение</th>
+                <th>Заказ №</th>
+                <th>Наименование</th>
+                <th>Количество</th>
+                <th>Цена</th>
+                <th>Дата заказа</th>
+                <th>Статус</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="order : ${orders}">
+                <td th:text="${order.getId()}"></td>
+                <td><img th:src="'/img/' + ${order.getProduct().imageList[0].getFileName()}" width="50px"></td>
+                <td th:text="${order.getNumber()}"></td>
+                <td th:text="${order.getProduct().getTitle()}"></td>
+                <td th:text="${order.getCount()}"></td>
+                <td th:text="${order.getPrice()}"></td>
+                <td th:text="${#temporals.format(order.getDateTime(), 'dd-MMM-yyyy')}"></td>
+                <td th:text="${order.getStatus()}"></td>
+
+            </tr>
+            </tbody>
+        </table>
+<!--    </div>-->
+<!--    <h3 class="resultorder"></h3>-->
+<!--    <div th:each="order : ${search_order}">-->
+<!--        <h3 th:text="'Заказ № ' + ${order.getNumber()}"></h3>-->
+<!--        <img th:src="'/img/' + ${order.getProduct().imageList[0].getFileName()}" width="300px">-->
+<!--        <p th:text="'Наименование: ' + ${order.getProduct().getTitle()}"></p>-->
+<!--        <p th:text="'Количество: ' + ${order.getCount()}"></p>-->
+<!--        <p th:text="'Цена: ' + ${order.getPrice()}"></p>-->
+<!--        <p th:text="'Дата заказа: ' + ${#temporals.format(order.getDateTime(), 'dd-MMM-yyyy')}"></p>-->
+<!--        <p th:text="'Статус: ' + ${order.getStatus()}"></p>-->
+<!--        <p th:text="'ID: ' + ${order.getId()}"></p>-->
+        <!--    <a th:href="@{/admin/order/status/{id}(id=${order.getId()})}">Отменить заказ</a>-->
+
+<!--        <form th:action="@{/admin/order/newstatus/{id}(id=${order.getId()})}">-->
+<!--            <h6>Изменить статус на:</h6>-->
+<!--            <select id="status" name="status">-->
+<!--                <option th:value = "0">Принят</option>-->
+<!--                <option th:value = "1">Оформлен</option>-->
+<!--                <option th:value = "2">Ожидает</option>-->
+<!--                <option th:value = "3">Получен</option>-->
+<!--                <option th:value = "4">Отменен</option>-->
+<!--            </select>-->
+
+<!--            <input type = "submit" value = "Установить">-->
+<!--        </form>-->
+
+<!--        <script>-->
+
+<!--            // document.querySelector(".allorder").outerHTML ="";-->
+<!--            document.querySelector(".resultorder").innerHTML ="Результат поиска: ";-->
+<!--            document.querySelector(".allorder1").outerHTML ="";-->
+
+<!--            let el = document.getElementById("ttt");-->
+<!--            el.remove();-->
+<!--        </script>-->
+<!--        <hr>-->
+<!--    </div>-->
+
+    <footer>
+        <div class="row ">
+            <!--                <div class="col-1"></div>-->
+            <div class="col-12">
+                <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                    <!--      <footer class="fixed-bottom d-flex flex-wrap justify-content-around align-items-center py-3 my-4 border-top">-->
+                    <div>
+                        <div class="d-flex align-items-center">
+                            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                                <img class = "footer-icon" src="/assets/img/cpu.png" alt="Bootstrap" width="30" height="25">
+                            </a>
+                            <span class="mb-3 mb-md-0 text-muted">&copy; 2022 HolodN, Inc</span>
+                        </div>
+                    </div>
+                    <ul class="nav col-md-2 justify-content-end list-unstyled d-flex">
+                        <div class = "footer-icon"><li class="ms-3"><a class="text-muted" href="#"><img src="/assets/img/facebook.png" alt="Facebook" width="30" height="25"></a></li></div>
+                        <div class = "footer-icon"> <li class="ms-3"><a class="text-muted" href="#"><img class = "footer-icon" src="/assets/img/instagram.png" alt="Instagramm" width="30" height="25"></a></li></div>
+                        <div class = "footer-icon"> <li class="ms-3"><a class="text-muted" href="#"><img class = "footer-icon" src="/assets/img/twitter.png" alt="Twitter" width="30" height="25"></a></li></div>
+                    </ul>
+                </div>
+            </div>
+            <!--                <div class="col-1"></div>-->
+        </div>
+    </footer>
 </div>
-
+<script src="@{/assets/dist/js/bootstrap.bundle.min.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script th:src="@{/js/index.js}"></script>
 </body>
 </html>
